--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.57",
     "@types/react-dom": "^18.2.10",
+    "axios": "^1.6.1",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
