--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.28"
+    "@types/react": "^18.2.28",
+    "@types/react-slick": "^0.23.12"
   }
 }
