The Products from SubCatalog is ready.Started to create filters for products.

--- a/parser/package.json
+++ b/parser/package.json
@@ -11,7 +11,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon parsingPhotos.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
